--- a/contents/css/main.less
+++ b/contents/css/main.less
@@ -1,1094 +1,141 @@
 @import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Roboto+Condensed:400,700,300|Oxygen+Mono);
 
 @import "vars";
+@import url(./_components/layout.less);
+@import url(./_components/brand.less);
+@import url(./_components/nav-content.less);
+@import url(./_components/header-nav.less);
+@import url(./_components/titlebar.less);
+@import url(./_components/article.less);
+@import url(./_components/markdowned.less);
+@import url(./_components/button.less);
+@import url(./_components/sidenav.less);
+@import url(./_components/downloads.less);
+@import url(./_components/tags.less);
+@import url(./_components/badge.less);
 
 body {
-  font-family: 'Droid Sans', sans-serif;
-}
-
-p {
-  line-height: 1.8;
-}
-
-a {
-  text-decoration: none;
-  color: @secondary;
-}
-
-ul, ol {
-  padding: 0;
-}
-
-.content {
-  ul, ol {
-    padding-left: 20px;
-  }
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Roboto Condensed', sans-serif;
-}
-
-h1 {
-  font-weight: 300;
-}
-
-a:hover {
-  color: lighten(@secondary, 15%);
-}
-
-.caps {
-  font-weight: bold;
-}
-
-a.btn, a.btn:hover{
-  color: white;
-}
-
-.btn {
-  background-color: @primary5;
-  &:hover {
-    background-color: darken(@primary5, 10%);
-  }
-  &:active, &.active{
-    background-color: darken(@primary5, 20%);
-  }
-}
-
-code {
-  color: @primary;
-  background-color: lighten(@primary, 50%);
-  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-  padding: 2px 6px;
-}
-
-article {
-  padding:  0 20px;
-}
-
-.article {
-  h1 {
-    font-size: 4em;
-    margin-bottom: 1em;
-  }
-}
-
-h2 {
-  color: @alt;
-  font-size: 1.8em;
-  line-height: 1.8;
-  font-weight: 700;
-
-}
-
-h3 {
-  font-size: 1.5em;
-}
-
-.scroll {
-  .main-nav {
-    opacity: .8;
-    transition: all .5s;
-    &:hover {
-      opacity: 1;
-    }
-  }
-}
-
-.main-nav {
-  position: fixed;
-  z-index: 1000;
-  left: 0;
-  right: 0;
-  top: 0;
-
-  .container .navbar {
-    li {
-      transition: all 90ms;
-    }
-
-    svg {
-      transition: all 90ms;
-    }
-  }
-}
-
-.main-header {
-  margin-top: 50px;
-}
-
-.homepage {
-  .main-header {
-    margin-top: 99px;
-  }
-}
-
-.navbar-inverse .navbar-inner {
-  background: none;
-}
-
-.main-nav {
-  background-color: @primary10;
-  .navbar {
-    background-color: @primary;
-    margin-bottom: 0;
-    border-radius: 0;
-    border: none;
-  }
-}
-
-.main-header {
-  background-color: @primary20;
-  margin-bottom: 20px;
-  .well {
-    border-radius: 0;
-    border: none;
-    margin-bottom: 0;
-    background-color: @secondary;
-    padding: 10px 20px;
-    display: -webkit-flex;
-    display: flex;
-    justify-content: space-between;
-    -webkit-justify-content: space-between;
-    &.page-title {
-      display: -webkit-flex;
-      display: flex;
-      -webkit-align-items: center;
-      align-items: center;
-      -webkit-justify-content: space-between;
-      justify-content: space-between;
-      .date {
-        font-size: 1.5em;
-        color: white;
-        white-space: nowrap;
-      }
-    }
-
-    h1 {
-      font-family: 'Roboto Condensed', sans-serif;
-      font-weight: 300;
-    }
-
-    h1, h2, p {
-      margin: 0;
-      color: @white;
-      display: inline-block;
-      margin-right: 10px;
-    }
-  }
-}
-
-.side-nav {
-  .btn {
-    display: inline-block;
-    margin-bottom: 10px;
-    -moz-box-shadow: border-box;
-    box-sizing: border-box;
-  }
-  .nav-tabs.nav-stacked {
-    & > li {
-      font-weight: 300;
-      font-family: 'Roboto Condensed', sans-serif;
-      letter-spacing: 1px;
-      &.active {
-        a {
-          background-color: @primary;
-          color: @white;
-          font-weight: 700;
-        }
-      }
-      &:first-child, &:last-child {
-        & > a {
-
-        }
-      }
-    }
-  }
-}
-
-.container .main-content {
-  min-height: 600px;
-}
-
-.page-title {
-  h1 {
-    padding-left: 20px;
-  }
-}
-
-@logo-width: 115px;
-@logo-height: 35px;
-
-.homepage {
-  .navbar {
-    display: flex;
-    > * {
-      float: none;
-    }
-    .navbar-nav {
-      li:first-child {
-        display: none;
-      }
-      li {
-        font-size: 1.3em;
-        margin-top: 24px;
-      }
-    }
-  }
-  .navbar .brand {
-
-
-    svg {
-      width: @logo-width * 2.5;
-      height: @logo-height * 2.5;
-    }
-  }
-
-  &.scroll {
-
-    .navbar-nav {
-
-      li {
-        font-size: 1em;
-        margin-top: 0;
-      }
-    }
-
-    .navbar .brand {
-      svg {
-        width: @logo-width;
-        height: @logo-height;
-      }
-    }
-  }
-
-}
-
-.navbar .brand {
-  display: block;
-  margin-left: 20px;
-  svg {
-    width: @logo-width;
-    height: @logo-height;
-    margin-top: 7px;
-    .tag {
-      fill: darken(@white, 20%);
-    }
-
-    .bracket {
-      fill: @white;
-    }
-
-    .slash {
-      fill: @primary20;
-    }
-
-    .letter {
-      fill: @white;
-    }
-
-    .smletter {
-      fill: @primary20;
-    }
-
-    .dot {
-      fill:@white;
-    }
-  }
-}
-
-
-.well h2 {
-  padding: 0;
-  border:none;
   margin: 0;
-}
-
-article.well h2 {
-  font-weight: 700;
-  font-size: 2.5em;
-  line-height: 1.1;
-  margin-left: 15px;
-}
-
-p.date {
-  font-weight: bold;
-}
-
-#localNav ul {
-  margin-left: 0;
+  font: 14px 'Droid Sans', sans-serif;
+  line-height: 1.42857143;
 }
 
 .container {
-  position: relative;
-}
-
-.affix {
-  position: static;
-}
-
-@media (min-width: 992px) {
-  .affix {
-    position: fixed;
-    top: 60px;
-    max-width: 200px;
+  display: flex;
+  justify-content: center;
+  &__center {
+    flex: 0 1 1170px;
   }
 }
 
-.show-example {
-  border: 1px solid #2980B9;
-  padding: 10px 20px;
-  margin: 20px 0;
-  border-radius: 4px;
-  overflow: hidden;
-}
-
-.table {
-  border: 1px solid #e7e7e7;
-  tbody, thead {
-    tr{
-      td, th {
-        padding: .5em 1em;
-        border-color: #e7e7e7;
-      }
-    }
-  }
-}
-
-.table th {
-  color: @alt;
-}
-
-.alert-info {
-  text-align: left;
-  color: @alt;
-  background-color: lighten(@alt, 50%);
-  border-color: @alt;
-}
-
-.scroll-top {
-  float: right;
-  font-size: .5em;
-  cursor: pointer;
-  transition: color .5s;
-  -webkit-transition: color .5s; /* Safari */
-}
-
-.scroll-top:hover {
-  color: #1abc9c;
-}
-
-.navbar-inner {
-  background: #16A085;;
-}
-
-.navbar .nav > li > a {
-  color: #fff;
-}
-
-.lesson-item {
-    padding: 0;
-    &:nth-of-type(2n) .well {
-        margin-right: 0;
-    }
-  .well {
-      padding: 1em;
-    min-height: 315px;
-    margin-bottom: 1em;
-    box-shadow: none;
-    border-radius: 0;
-    margin-right: 1em;
-
-    display: flex;
-    flex-direction: column;
-
-    header {
-        flex: 0;
-    }
-
-    section {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-
-        div {
-            margin: 1em 0;
-        }
-
-        p{
-            &:first-of-type {
-                flex: 1;
-                font-size: 2rem;
-                line-height: 1.5em;
-            }
-            &:empty {
-                display: none;
-            }
-            &:last-of-type {
-                margin: 0;
-                display: flex;
-                & > * {
-                    flex: 1;
-                }
-            }
-        }
-    }
-
-    h2 {
-      font-size: 4em;
-      line-height: 1em;
-      margin-bottom: 0;
-      a {
-        color: @alt;
-      }
-    }
-    p {
-      text-align: left;
-    }
-    div {
-      .label {
-        font-size: 1.1em;
-      }
-    }
-  }
-  position: relative;
-}
-
-.lesson-item .more {
-  a {
-    color: @white;
-  }
-}
-
-.row-fluid [class*="span3"]:nth-child(4n+1) {
-  margin-left: 0;
-}
-
-footer {
-  background-color: lighten(@gray,10%);
-  .container{
-    background-color: @gray;
-    color: @white;
-    padding: 20px;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    p {
-      margin: 0;
-    }
-  }
-  .footer-container {
-    display: flex;
+.simple-row {
+  display: flex;
+  &--footer {
     justify-content: space-between;
     align-items: center;
   }
 }
 
-.btn-group {
-  margin-left: 0;
-}
-
-#cntrBoxModel {
-  padding: 0;
-}
-
-.box-container {
-
-  box-sizing: content-box;
-
-  margin: 0 0 20px;
-
-  border: 2px solid #d3d3d3;
-  padding: 10px 0;
-  height: 400px;
-  position: relative;
-  overflow: hidden;
-
-}
-
-.box-container:before {
-  content: "";
-  background: #d3d3d3;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 400px;
-  z-index: 0;
-}
-
-.box-container:after {
-  position: absolute;
-  left: 400px;
-  width: 1px;
-  top: 0;
-  bottom: 0;
-  content: "";
-  background: #000000;
-  z-index: 0;
-}
-
-.box-model {
-  box-sizing: content-box;
-  width: 100%;
-  position: relative;
-  z-index: 100;
-  background-color: @primary;
-  color: #ffffff;
-  transition: all .3s;
-}
-
-.overflow {
-  border: 1px solid @secondary;
-  padding: 10px;
-  height: 100px;
-  background-color: silver;
-  margin-bottom: 20px;
-}
-
-.dateview(@offset: 20deg) {
-  -webkit-transform: perspective( 100px ) rotateY( @offset );
-  -moz-transform: perspective( 100px ) rotateY( @offset );
-  -o-transform: perspective( 100px ) rotateY( @offset );
-  transform: perspective( 100px ) rotateY( @offset );
-}
-
-.bs-sidenav {
-  margin-top: 0;
-  margin-bottom: 30px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-.date {
-  font-weight: 100;
-  color: @alt;
-  font-size: .85em;
-  span, i {
-    padding-right: 5px;
+.global-nav {
+  background-color: #36d278;
+  & > * {
+    background-color: #27ae60;
   }
 }
 
-/*
-  .main-nav {
-    background: none;
-    .nav {
-      display: none;
-    }
-    .navbar-inner,.navbar{
-      background: none;
-      box-shadow: none;
-      padding: none !important;
-    }
-    .brand {
-      text-indent: 0;
-      padding: 0;
-      background: none;
-      height: inherit;
-      width: inherit;
-    }
+.main-titlebar {
+  background-color: #60db94;
+  & > * {
+    background-color: #19703e;
   }
-
-  .main-header {
-    background: none;
-    .well {
-      display: none;
-    }
-  }
-*/
-
-.btn {
-  -moz-box-sizing: border-box;
-  box-shadow: border-box;
 }
 
-.input-overlay {
-  background-color: #fff;
-  border-width: 1px;
-  border-color: #ddd;
-  border-radius: 4px;
+.global-footer {
+  background-color: #d9dcde;
+  & > * {
+    background-color: #bdc3c7;
+    padding: 1.3em;
+  }
+  p {
+    margin: 0;
+    color: @white;
+  }
+}
+
+code {
+  color: #27ae60;
+  background-color: #ddf7e8;
+  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  padding: 2px 6px;
+  font-size: .9em;
+  border-radius: .2em;
+}
+
+.grid {
+  display: grid;
+  &--homepage {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 300px;
+    grid-auto-rows: 300px;
+    grid-gap: 1em;
+    margin-top: 1em;
+    /* Portrait */
+    @media only screen
+      and (min-device-width: 1024px)
+      and (max-device-width: 1366px)
+      and (orientation: portrait)
+      and (-webkit-min-device-pixel-ratio: 1.5) {
+        grid-template-rows: 272px;
+        grid-auto-rows: 271px;
+    }
+  }
+}
+
+.lesson {
+  padding: 1em;
   box-shadow: none;
-  position: relative;
-  padding: 45px 15px 15px;
-  margin: 0;
-  width: 240px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-left: -120px;
-  margin-top: -100px;
-  box-sizing: border-box;
-  z-index: 120;
-
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0,0,0,.5);
-}
-
-img[src$="homework.png"] {max-width: 100%;}
-
-.homework-view {
-  display: flex;
-  border-top: 1px solid @alt;
-  border-bottom: 1px solid @alt;
-
-  margin-top: 10px;
-  margin-bottom: 10px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-
-  h2 {
-    margin-top: 0;
-  }
-
-  div {
-    margin-right: 20px;
-    &:first-child {
-      max-width: 150px;
-      img {
-        max-width: 100%;
-        border: 2px solid gray;
-      }
-    }
-  }
-
-}
-.navbar-default .navbar-toggle {
-  border-color: @secondary;
-  background-color: @primary20;
-  &:hover, &:active, &:focus {
-    background-color: @alt;
-    outline: none;
-  }
-
-}
-
-.navbar-default .navbar-toggle .icon-bar {
-  background-color: @secondary;
-}
-
-.label {
-  &.html{
-    background-color: #E44D26;
-  }
-  &.css {
-    background-color: #1572B6;
-  }
-  &.js {
-    background-color: #F0DB4F;
-    color: black;
-  }
-  &.attribute {
-    background-color: #008080;
-  }
-  text-transform: uppercase;
-  i {
-    margin-right: 3px;
-  }
-}
-
-.tags {
   display: flex;
   flex-direction: column;
-  align-items: baseline;
-  border: solid silver;
-  border-width: 0 1px;
-  padding: 5px 10px;
-  background-color: #FAFAFA;
-  &:first-of-type {
-    border-top-width: 1px;
-    border-radius: 5px 5px 0 0;
-    padding-top: 10px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  &__title {
+    margin: 0;
+    line-height: 1em;
   }
-  &:last-of-type {
-    border-bottom-width: 1px;
-    border-radius: 0 0 5px 5px;
-    padding-bottom: 10px;
-    margin-bottom: 10px;
+  &__link {
+    text-decoration: none;
+    color: @primary;
+    font-size: 2em;
+    font-weight: 700;
+    line-height: 1em;
+    &:hover {
+      text-decoration: underline;
+    }
   }
-  &:first-of-type:last-of-type {
-    border-radius: 5px;
+  &__date {
+    color: @primary;
   }
-
-  .data {
-    font-size: 1.4em;
-    white-space: nowrap;
-    margin-right: 10px;
-    margin-bottom: 5px;
-    min-width: 50px;
-  }
-
-  ul {
+  &__content {
+    flex: 1;
     display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    align-items: baseline;
-    margin-bottom: 0;
-    li {
-      margin-right: 2px;
-      &:not(:last-child):after {
-        content: ',';
-      }
-    }
-  }
-}
-
-pre {
-  border: none;
-  padding: 0;
-  border-radius: 0;
-}
-
-.hasSwatches {
-  margin: 0;
-  padding: 0 !important;
-  list-style: none;
-  display: flex;
-  display: -webkit-flex;
-  flex-wrap: wrap;
-  -webkit-flex-wrap: wrap;
-  &:after {
-    display: block;
-    content: "";
-    clear: both;
-  }
-  li {
-    background-color: #fff;
-    margin-left: .3em;
-    margin-bottom: .3em;
-
-    .swatchWrapper {
-      height: 140px;
-      .swatchColor{
-        width: 100px;
-        height: 100px;
-        border: 1px solid silver;
-      }
-      .swatchLabel {
-        transition: all .1s;
-        position: relative;
-        top: 0;
-        margin: 5px 0 0;
-        text-align: center;
-        font-family: Courier New;
-      }
-      &:hover {
-        .swatch {
-          transform: scale(1.1);
-          box-shadow: 0 5px 10px rgba(0,0,0,.1);
-          .swatchColor {
-            height: 128px;
-            margin-bottom: -34px;
-          }
-          .swatchLabel {
-            top: -2.8em;
-            font-size: 1.2em;
-            text-shadow: 0 1px 0 rgba(255,255,255,.3);
-            font-weight: bold;
-          }
-        }
-      }
-    }
-    .swatch {
-      background-color: #fff;
-      border: 1px solid silver;
-      padding: .3em;
-      transition: all .2s;
-    }
-    .smSwatch {
-      .swatchColor {
-        width: 20px;
-        height: 20px;
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 1200px) {
-  .lesson-item {
-    .well h2 {
-      font-size: 3em;
-    }
-  }
-  .nav.navbar-nav {
-    font-size: .9em;
-  }
-}
-@media screen and (max-width: 1024px) {
-  article
-  {
-    .well h2 {
-      font-size: 1.5em;
-      margin-bottom: 20px;
-    }
-  }
-}
-
-@media screen and (max-width: 992px) {
-  .lesson-item .well {
-      margin-right: 0;
-  }
-  .nav.navbar-nav {
-    font-size: .8em;
-  }
-
-  .col-md-3.well {
-    width: calc(~"50% - 10px");
-    float: left;
-  }
-
-  .col-md-3.well:nth-of-type(4n) {
-    width: calc(~"50% - 10px");
-  }
-
-  .side-nav ul.bs-sidenav {
-    margin: 0 0 20px;
-  }
-
-  .main-level {
-    display: flex;
-    flex-direction: column-reverse;
-    .nav > li {
-      a{
-        padding: 0 1em 0 0;
-      }
-      &.active {
-        a {
-          border: none;
-        }
-      }
-    }
-    .main-side-nav {
-      display: flex;
-    }
-  }
-
-  .homepage .main-level {
     flex-direction: column;
-  }
-
-
-
-  .homepage {
-    .navbar {
-      .brand {
-        margin-left: 10px;
-        svg {
-          width: @logo-width;
-          height: @logo-height;
-          margin-top: 7px;
-        }
+    p {
+      &:first-of-type {
+        flex: 1;
       }
-      .navbar-nav li {
-        margin-top: 0;
+      &:last-of-type {
+        margin: 0;
       }
-    }
-    .main-header {
-      margin-top: 50px;
-      h2 {
+      &:empty {
         display: none;
       }
     }
-  }
-}
-
-@media screen and (max-width: 740px) {
-  .main-level {
-    flex-direction: column-reverse;
-    .main-side-nav {
-      display: block;
+    > div {
+      margin: .5em 0;
     }
   }
-}
-
-@media screen and (max-width: 640px) {
-
-  .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
-    max-width: 100%;
+  &__button {
+    width: 100%;
+    box-sizing: border-box;
   }
-
-
-  .lesson-item {
-    .well {
-      min-height: 250px;
-      h2 {
-        font-size: 3em;
-        line-height: 1em;
-        margin: 0 0 .2em;
-      }
-    }
-  }
-
-  .col-md-3.well {
-    width: calc(~"50% - 10px");
-    margin: 5px;
-    &:nth-child(4n+1) {
-      margin: 5px;
-    }
-    &.side-nav {
-      width: 98%;
-      li {
-        float: left;
-        a {
-          padding: 5px;
-        }
-      }
-    }
-  }
-  .col-md-9 {
-    width: auto;
-    margin-left: 0;
-  }
-
-  .navbar .nav > li > a {
-    padding: 14px 7px 17px;
-  }
-
-
-  article.well h2 {
-    margin-left: 0;
-  }
-
-
-}
-
-.nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus {
-  border-left: 2px solid @primary;
-  background-color: transparent;
-  color: @primary;
-  border-radius: 0;
-  font-weight: bold;
-}
-
-.nav>li>a {
-  border-left: 2px solid transparent;
-}
-.nav>li>a:hover, .nav>li>a:focus {
-  border-left: 2px solid @primary20;
-  background-color: transparent;
-  border-radius: 0;
-}
-
-.nav-stacked>li+li {
-  margin-top: 0;
-}
-
-@media screen and (max-width: 768px) {
-  .homepage .navbar{
-    display: inherit;
-  }
-
-  p {
-    text-align: left;
-  }
-  .main-content {
-    order: 2;
-  }
-  .side-nav {
-    order: 1;
-    .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
-      border: 1px solid;
-    }
-  }
-  .tags {
-    display: none;
-  }
-}
-
-table.no-style {
-  font-family: monospace;
-  border: 1px solid silver;
-  width: auto;
-  tr {
-    th {
-      background-color: transparent;
-      text-align: center;
-    }
-    td, th {
-      border: 1px solid silver;
-    }
-  }
-}
-
-//iPhone 5:
-@media screen and (max-width: 420px) {
-
-  .navbar {
-    .brand {
-      margin-left: 10px;
-    }
-  }
-
-  .page-title h1 {
-    padding-left: 0;
-  }
-
-  .side-nav,
-  .main-content {
-    padding: 0;
-  }
-
-  article {
-    padding: 0;
-  }
-
-  .move-item {
-    display: none;
-  }
-
-  .row-fluid [class*="span"] {
-    float: none;
-  }
-
-  .col-md-3.well {
-    width: auto;
-    min-height: 0;
-    padding-bottom: 45px;
-    margin: 5px;
-    p:first-of-type {
-      margin-right: 60px;
-    }
-    &:nth-child(4n) {
-      margin: 5px;
-      width: auto;
-    }
-    &.side-nav {
-      width: 98%;
-      li {
-        float: none;
-        a {
-          padding: 5px;
-        }
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .main-header .well {
-    h1 {
-      font-size: 2em;
-    }
-    .date.date {
-      font-size: 1em;
-      text-align: right;
-    }
-  }
-}
-
-//iPad:
-@media screen and (max-width: 1024lpx) {
-  .lesson-item {
-    .well {
-      h2 {
-        font-size: 3em;
-      }
-    }
-  }
-
 }
