--- a/templates/article.jade
+++ b/templates/article.jade
@@ -17,35 +17,49 @@ block prepend title
   | #{ page.title + " - "}
 
 block header
-  include author
-  div.well.small.page-title
-    h1= page.title
-    div.date
-      i.fa.fa-calendar
-      span.month= moment(page.date).format('MMMM')
-      span.day= moment(page.date).format('D') + ","
-      span.year= moment(page.date).format('YYYY')
-      
+  div.titlebar
+    h1.titlebar__main= page.title
+    div.titlebar__date
+      ul.layout.layout--date
+        li.layout__item
+          i.fa.fa-calendar
+        li.layout__item 
+          span.date= moment(page.date).format('MMMM D, YYYY')
 block content
-  div.col-md-9.main-content
-    article.article
+  section.article
+    article.article__primary!= typogr(page.html).typogrify()
+    aside.article__secondary
+      div.side-nav-inner
 
-      section.content!= typogr(page.html).typogrify()
-  div.col-md-3.side-nav
-    div.side-nav-inner
-      if page.metadata.tags
-        each val, index in page.metadata.tags
-          div.tags
-            div.data
-              span(class=val.label).label.label-default
-                i(class=val.icon)
-                = val.label
-            ul
-              each tag in val.data
-                li
-                  if val.label == "html"
-                    code &lt;#{tag}&gt;
-                  if val.label == "css"
-                    code #{tag}:&#123;&#125;
-                  if val.label == "attribute"
-                    code "#{tag}"
+        if page.metadata.nav
+          ul.sidenav
+            each href, key in page.metadata.nav
+              li.sidenav__item
+                a(href=href).sidenav__link #{key}
+
+        if page.metadata.downloads
+          h3 Class Files
+          ul.downloads
+            each data, label in page.metadata.downloads
+              li.downloads__item
+                a(href=data.file, class=(data.btn ? `btn--${data.btn}` : '')).btn #{label}
+                  i.fa.fa-download
+
+        if page.metadata.tags
+          h3 Tags in Lesson
+          .tags
+            each val, index in page.metadata.tags
+              .tags__item
+                div.data
+                  span(class=`badge--${val.label}`).badge
+                    i(class=val.icon) 
+                    = val.label
+                ul.tags__list
+                  each tag in val.data
+                    li.tags__list-item
+                      if val.label == "html"
+                        code &lt;#{tag}&gt;
+                      if val.label == "css"
+                        code #{tag}:&#123;&#125;
+                      if val.label == "attribute"
+                        code "#{tag}"
