--- a/templates/single.jade
+++ b/templates/single.jade
@@ -5,8 +5,8 @@ block prepend title
   | #{ page.title + " - "}
 block header
   include author
-  div.well.small
-    h1= page.title
+  div.titlebar
+    h1.titlebar__main= page.title
 block content
   article.article
     section.content!= typogr(page.html).typogrify()
